deployment.yml
apiVersion: apps/v1
kind: Deployment

# metadata
metadata:
  name: sceneclassifier-deployment
  labels:
    app: sceneclassifier
    type: front-end

# replicaset specs
spec:
  template: # pod template, same metadata and spec as pod.yaml
    metadata:
      name: sceneclassifier-pod
      labels:
          app: sceneclassifier
          type: front-end
    spec:
        containers:
          - name: sceneclassifier-container
            image: guolin1/sceneclassifier:1.1.4 # DockerHub
            ports:
              - containerPort: 8501
  replicas: 1 # number of pods to be deployed. 
              # if running sceneclassifier:1.0, only 1 replica canrun. When there are more than 1 pod running, cross-site request 
              # forgery (XSRF) protection may prevent user from uploading images for classification.
              # Hopefully this is something that will be fixed in future streamlit releases. 
              # To allow multi-replicas, set image to: guolin1/sceneclassifier:1.1.4 which has xsrf protection disabled  
  selector:   # selector
    matchLabels:
      type: front-end
