pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: sceneclassifier-pod
    labels:
        app: sceneclassifier
        type: front-end
spec:
    containers:
      - name: sceneclassifier-container
        image: guolin1/sceneclassifier:1.0 # DockerHub
