service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: streamlitweb
 annotations:
   kubernetes.io/ingress.global-static-ip-name: streamlitweb-ip
   networking.gke.io/managed-certificates: streamlit-certificate
 labels:
   app: sceneclassifier
spec:
 backend:
   serviceName: sceneclassifier-service
   servicePort: 8501
---
apiVersion: v1
kind: Service

metadata:
  name: sceneclassifier-service

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8501
      nodePort: 30008
  selector:
    app: sceneclassifier
    type: front-end
